src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>datasan__Address_Barcode__c</fullName>
        <label>Address Barcode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Address_Bsp__c</fullName>
        <label>Address Bsp</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Address_DPID__c</fullName>
        <label>Address DPID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Address_GNAFConfidence__c</fullName>
        <label>Address GNAFConfidence</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Address_GNAFGroupPID__c</fullName>
        <label>Address GNAFGroupPID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Address_GNAFPID__c</fullName>
        <label>Address GNAFPID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Address_GNAFPointPID__c</fullName>
        <label>Address GNAFPointPID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Address_GNAFReliability__c</fullName>
        <label>Address GNAFReliability</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Address_GeocodeLevel__c</fullName>
        <label>Address GeocodeLevel</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Address_LatLong__c</fullName>
        <label>Address LatLong</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Address_MeshBlock__c</fullName>
        <label>Address MeshBlock</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Address_ParcelID__c</fullName>
        <label>Address ParcelID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Address_SOT__c</fullName>
        <label>Address SOT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AUPAF</fullName>
                </value>
                <value>
                    <fullName>GNAF</fullName>
                </value>
                <value>
                    <fullName>AUSOTS</fullName>
                </value>
                <value>
                    <fullName>NZPAF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>datasan__Address_XYCoordinate__c</fullName>
        <label>Address MapGrid</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Lead_ABN__c</fullName>
        <label>Lead ABN</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>